--- a/3. 하이닉스 기업 사이트 따라하기/assets/css/reset.css
+++ b/3. 하이닉스 기업 사이트 따라하기/assets/css/reset.css
@@ -1,3 +1,8 @@
 /*여백초기화*/
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,button{margin:0;padding:0}
-
+/*블릿기호 초기화*/
+dl,ul,ol,menu,li{list-style:none;}
+/*링크초기화*/
+a{color:#222;text-decoration:none;}
+a:hover{color:#118eff;text-decoration:none;}
+a:active{background-color:transparent;}
